--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html>
   <head>
     <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
+    <script src="https://unpkg.com/aframe-environment-component@1.3.3/dist/aframe-environment-component.min.js"></script>
+    <script src="https://unpkg.com/aframe-orbit-controls@1.3.2/dist/aframe-orbit-controls.min.js"></script>
     <script src="https://quadjr.github.io/aframe-gaussian-splatting/index.js"></script>
   </head>
   <body>
     <a-scene renderer="antialias: false" stats>
-      <a-entity gaussian_splatting="src: https://huggingface.co/NikV09/SplaTAM_S1/resolve/main/3dgs_large_scale.splat;" rotation="0 0 0" position="0 -0.5 0"></a-entity>
+      <a-entity camera look-controls="enabled: false" orbit-controls="target: 0 2 0; minDistance: -10000; initialPosition: 0 0.5 0; rotateSpeed: 0.5"></a-entity>
+      <a-entity gaussian_splatting="src: https://huggingface.co/NikV09/SplaTAM_S1/resolve/main/3dgs_large_scale.splat;"></a-entity>
       <a-sky color="#FFFFFF"></a-sky>
     </a-scene>
   </body>
